# Lyxor-Testing-Repo

./: .gitlab-ci.yml  App.tsx  Cargo.toml  Dockerfile  Gemfile  InvoiceManagementAPI.csproj  Program.cs  README.md  angular.json  app.json  app.py  build.gradle.kts  config.py  docker-compose.yml  go.mod  index.html  kong.yml  main.go  main.py  manage.py  models.py  package.json  pom.xml  requirements.txt  server.js  sfdx-project.json
Controllers/: InvoicesController.cs
DTOs/: CreateInvoiceRequest.cs  InvoiceResponse.cs
Data/: ApplicationDbContext.cs
Middleware/: ExceptionMiddleware.cs
Models/: Invoice.cs
OrderManagementAPI/: OrderManagementAPI.csproj  Program.cs
Properties/: launchSettings.json
Repositories/: IInvoiceRepository.cs  InvoiceRepository.cs
Services/: IInvoiceService.cs  InvoiceService.cs
Utils/: Validators.cs
app/: config.py  db.py  error.tsx  globals.css  layout.tsx  main.py  models.py  page.module.css  page.tsx  services.py
auth-service/: package.json  server.js
authentication/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
authproject/: settings.py  urls.py  wsgi.py
backend/: database.py  main.py  models.py  package.json  requirements.txt  schemas.py  server.js
classes/: LeadCampaignService.cls  LeadConversionService.cls  LeadProcessingService.cls  LeadRelatedRecordService.cls  LeadTriggerHandler.cls  LeadUtility.cls  LeadValidationService.cls
client/: package.json
components/: FormField.tsx  ProfileForm.tsx
config/: application.rb  config.js  database.js  database.yml  deploy.yml  gateway-config.yml  (+1 more)
(+312 files in other folders)
