[package]
name = "user-management-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
actix-rt = "2.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bcrypt = "0.15"
env_logger = "0.11"
log = "0.4"

